working on IE html formatting issues

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -112,6 +112,32 @@ body hr {
 	margin-right: auto;
 	text-align: center;
 }
+.layout_mainContent .books {
+	margin-left: auto;
+	margin-right: auto;
+	vertical-align: top;
+	zoom: 1;
+}
+.layout_mainContent .books th {
+	vertical-align: top;
+}
+.layout_mainContent .books span {
+	zoom: 1;
+	width: 250px;
+	padding: 3px;
+	margin: 10px;
+	text-align:center;
+	vertical-align:top;
+	font-size:small;
+	background:#CCCCCC;
+	color:#000000;
+	border-width: 1px;
+	border-style: dotted;
+	border-color: #000000;
+}
+.layout_mainContent .books td {
+	font-size:x-small;
+}
 .layout_mainContent .book table {
 	font-size:x-small;
 }
